cfn/ec2.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Network Template: Sample template that creates a Web EC2 Instance and public IPs enabled.

# This template creates:
#   Security Group
#   EC2 instance
#   Elatic IP

Parameters:

  VpcId:
    Description: The VPC of the worker instances
    Type: AWS::EC2::VPC::Id

  NetworkStackName:
    Description: >-
      Name of an active CloudFormation stack that contains the networking
      resources, such as the VPC and subnet that will be used in this stack.
    Type: String
    MinLength: 1
    MaxLength: 255
    AllowedPattern: '^[a-zA-Z][-a-zA-Z0-9]*$'
    Default: test-vpc

  SSHLocation:
    Description: The IP address range that can be used to SSH to the EC2 instances
    Type: String
    MinLength: 9
    MaxLength: 18
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.

  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
    AllowedValues: [t2.nano, t2.micro, t2.small, t2.medium, t2.large
      t3.nano, t3.micro, t3.small, t3.medium, t3.large
      m4.large, m5.large]
    ConstraintDescription: must be a valid EC2 instance type.

  LatestAmiId:
    Type:  'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2'

  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.

######################
# Resources section
######################

Resources:

  ## Security Group for EC2

  Ec2SecurityGroup:  
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: "EC2 SG"
      GroupDescription: "Security group with allow HTTP"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref SSHLocation   

  ## EC2 instance

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      SubnetId:
        Fn::ImportValue:
          !Sub ${NetworkStackName}-PublicSubnet1
      InstanceType: !Ref 'InstanceType'
      SecurityGroupIds: [
          !Ref Ec2SecurityGroup
        ]
      ImageId: !Ref 'LatestAmiId'
      # IamInstanceProfile: <Profile_Name, find within IAM Role for EC2>
      KeyName: !Ref KeyName
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Install Apache Web Server and PHP 
          yum install -y php72 wget httpd24
          # Download Lab files 
          wget https://raw.githubusercontent.com/ecloudvalley/How-to-build-an-elastic-structure/master/index.php
          mv index.php /var/www/html/
          # Turn on web server 
          chkconfig httpd on 
          service httpd start
      Tags:
        - 
          Key: "Name"
          Value: "Web EC2"    

  ## Elatic IP

  IPAddress:
    Type: AWS::EC2::EIP

  ## IP Associate

  IPAssoc:
    Type: AWS::EC2::EIPAssociation
    Properties:
      InstanceId: !Ref 'EC2Instance'
      EIP: !Ref 'IPAddress'    
                    
######################
# Outputs section
######################

Outputs:

  URL:
    Description: URL of the sample website
    Value: !Sub 'http://${EC2Instance.PublicDnsName}'

  InstanceIPAddress:
    Description: IP address of the newly created EC2 instance
    Value: !Ref 'IPAddress'
